--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ torch
 torchvision
 # git+https://github.com/facebookresearch/detectron2.git
 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu113/torch1.10/index.html
+detectron2
