--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,8 @@ matplotlib-inline==0.1.6
 opencv-python==4.7.0.72
 pandarallel==1.6.5
 pandas==1.5.3
-pyyaml==5.1
 streamlit==1.34.0
 torch
 torchvision
-# git+https://github.com/facebookresearch/detectron2.git
 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu113/torch1.10/index.html
-detectron2
+git+https://github.com/facebookresearch/detectron2.git@v0.6
