--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ opencv-python==4.7.0.72
 pandarallel==1.6.5
 pandas==1.5.3
 streamlit==1.34.0
-torch
-torchvision
--f https://dl.fbaipublicfiles.com/detectron2/wheels/cu113/torch1.10/index.html
-git+https://github.com/facebookresearch/detectron2.git@v0.6
+torch==1.9.0
+torchvision==0.10.0
+-f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.9/index.html
+detectron2
+#git+https://github.com/facebookresearch/detectron2.git@v0.6
