--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,5 @@ pandas==1.5.3
 streamlit==1.34.0
 torch==1.9.0
 torchvision==0.10.0
--f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.9/index.html
-detectron2
+detectron2 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.9/index.html
 #git+https://github.com/facebookresearch/detectron2.git@v0.6
